# openfxplugin

./: .gitignore  CMakeLists.txt
src/: MyPlugin.cpp  ofxUtilities.h
